lts08.lcstools/tools/src/ihgp/src/ai/chap6/opred/y.output

state 0
	$accept : _start $end 
	start : _    (1)

	.  reduce 1

	start  goto 1

state 1
	$accept :  start_$end 
	start :  start_conclusion linesynch 
	start :  start_expressionlist conclusion linesynch 
	start :  start_newline 
	start :  start_error newline 
	start :  start_QUIT linesynch 
	start :  start_QUIT newline 

	$end  accept
	error  shift 5
	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	NEWLINE  shift 9
	PIDENTIFIER  shift 26
	QUIT  shift 6
	THEREFORE  shift 7
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	biconditional  goto 11
	conclusion  goto 2
	expression  goto 10
	implication  goto 12
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19
	expressionlist  goto 3
	newline  goto 4
	separator_expressionlist  goto 8

state 2
	start :  start conclusion_linesynch 

	SEMICOLON  shift 28
	.  error

	linesynch  goto 27

state 3
	start :  start expressionlist_conclusion linesynch 
	expressionlist :  expressionlist_separator_expressionlist linesynch 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	THEREFORE  shift 7
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	biconditional  goto 11
	conclusion  goto 29
	expression  goto 10
	implication  goto 12
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19
	separator_expressionlist  goto 30

state 4
	start :  start newline_    (4)

	.  reduce 4


state 5
	start :  start error_newline 

	NEWLINE  shift 9
	.  error

	newline  goto 31

state 6
	start :  start QUIT_linesynch 
	start :  start QUIT_newline 

	NEWLINE  shift 9
	SEMICOLON  shift 28
	.  error

	linesynch  goto 32
	newline  goto 33

state 7
	conclusion :  THEREFORE_expression 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	biconditional  goto 11
	expression  goto 34
	implication  goto 12
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 8
	expressionlist :  separator_expressionlist_linesynch 
	separator_expressionlist :  separator_expressionlist_separator expression 

	COMMA  shift 37
	SEMICOLON  shift 28
	.  error

	linesynch  goto 35
	separator  goto 36

state 9
	newline :  NEWLINE_    (46)

	.  reduce 46


state 10
	separator_expressionlist :  expression_    (10)

	.  reduce 10


state 11
	expression :  biconditional_    (12)
	biconditional :  biconditional_BICONDITIONAL implication 

	BICONDITIONAL  shift 38
	.  reduce 12


state 12
	biconditional :  implication_    (13)
	implication :  implication_IMPLICATION or 

	IMPLICATION  shift 39
	.  reduce 13


state 13
	implication :  or_    (15)
	or :  or_OR and 

	OR  shift 40
	.  reduce 15


state 14
	or :  and_    (17)
	and :  and_AND unary 

	AND  shift 41
	.  reduce 17


state 15
	and :  unary_    (19)

	.  reduce 19


state 16
	unary :  atom_    (21)

	.  reduce 21


state 17
	unary :  NEGATION_unary 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	atom  goto 16
	predicate  goto 20
	unary  goto 42
	universal  goto 18
	existential  goto 19

state 18
	unary :  universal_unary 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	atom  goto 16
	predicate  goto 20
	unary  goto 43
	universal  goto 18
	existential  goto 19

state 19
	unary :  existential_unary 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	atom  goto 16
	predicate  goto 20
	unary  goto 44
	universal  goto 18
	existential  goto 19

state 20
	atom :  predicate_    (27)

	.  reduce 27


state 21
	atom :  TRUE_    (28)

	.  reduce 28


state 22
	atom :  FALSE_    (29)

	.  reduce 29


state 23
	atom :  LPAREN_expression RPAREN 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	biconditional  goto 11
	expression  goto 45
	implication  goto 12
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 24
	universal :  LEFTUNIVERSAL_IDENTIFIER RIGHTUNIVERSAL 

	IDENTIFIER  shift 46
	.  error


state 25
	existential :  LEFTEXISTENTIAL_IDENTIFIER RIGHTEXISTENTIAL 

	IDENTIFIER  shift 47
	.  error


state 26
	predicate :  PIDENTIFIER_    (31)
	predicate :  PIDENTIFIER_LPAREN arglist RPAREN 

	LPAREN  shift 48
	.  reduce 31


state 27
	start :  start conclusion linesynch_    (2)

	.  reduce 2


state 28
	linesynch :  SEMICOLON_newline 

	NEWLINE  shift 9
	.  error

	newline  goto 49

state 29
	start :  start expressionlist conclusion_linesynch 

	SEMICOLON  shift 28
	.  error

	linesynch  goto 50

state 30
	expressionlist :  expressionlist separator_expressionlist_linesynch 
	separator_expressionlist :  separator_expressionlist_separator expression 

	COMMA  shift 37
	SEMICOLON  shift 28
	.  error

	linesynch  goto 51
	separator  goto 36

state 31
	start :  start error newline_    (5)

	.  reduce 5


state 32
	start :  start QUIT linesynch_    (6)

	.  reduce 6


state 33
	start :  start QUIT newline_    (7)

	.  reduce 7


state 34
	conclusion :  THEREFORE expression_    (44)

	.  reduce 44


state 35
	expressionlist :  separator_expressionlist linesynch_    (8)

	.  reduce 8


state 36
	separator_expressionlist :  separator_expressionlist separator_expression 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	biconditional  goto 11
	expression  goto 52
	implication  goto 12
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 37
	separator :  COMMA_    (43)

	.  reduce 43


state 38
	biconditional :  biconditional BICONDITIONAL_implication 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	implication  goto 53
	or  goto 13
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 39
	implication :  implication IMPLICATION_or 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 14
	atom  goto 16
	or  goto 54
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 40
	or :  or OR_and 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	and  goto 55
	atom  goto 16
	predicate  goto 20
	unary  goto 15
	universal  goto 18
	existential  goto 19

state 41
	and :  and AND_unary 

	FALSE  shift 22
	LEFTEXISTENTIAL  shift 25
	LEFTUNIVERSAL  shift 24
	LPAREN  shift 23
	NEGATION  shift 17
	PIDENTIFIER  shift 26
	TRUE  shift 21
	.  error

	atom  goto 16
	predicate  goto 20
	unary  goto 56
	universal  goto 18
	existential  goto 19

state 42
	unary :  NEGATION unary_    (22)

	.  reduce 22


state 43
	unary :  universal unary_    (23)

	.  reduce 23


state 44
	unary :  existential unary_    (24)

	.  reduce 24


state 45
	atom :  LPAREN expression_RPAREN 

	RPAREN  shift 57
	.  error


state 46
	universal :  LEFTUNIVERSAL IDENTIFIER_RIGHTUNIVERSAL 

	RIGHTUNIVERSAL  shift 58
	.  error


state 47
	existential :  LEFTEXISTENTIAL IDENTIFIER_RIGHTEXISTENTIAL 

	RIGHTEXISTENTIAL  shift 59
	.  error


state 48
	predicate :  PIDENTIFIER LPAREN_arglist RPAREN 

	IDENTIFIER  shift 68
	NUMBER  shift 67
	STRING  shift 66
	.  error

	arglist  goto 60
	arg  goto 61
	constant  goto 63
	function  goto 65
	term  goto 62
	variable  goto 64

state 49
	linesynch :  SEMICOLON newline_    (45)

	.  reduce 45


state 50
	start :  start expressionlist conclusion linesynch_    (3)

	.  reduce 3


state 51
	expressionlist :  expressionlist separator_expressionlist linesynch_    (9)

	.  reduce 9


state 52
	separator_expressionlist :  separator_expressionlist separator expression_    (11)

	.  reduce 11


state 53
	biconditional :  biconditional BICONDITIONAL implication_    (14)
	implication :  implication_IMPLICATION or 

	IMPLICATION  shift 39
	.  reduce 14


state 54
	implication :  implication IMPLICATION or_    (16)
	or :  or_OR and 

	OR  shift 40
	.  reduce 16


state 55
	or :  or OR and_    (18)
	and :  and_AND unary 

	AND  shift 41
	.  reduce 18


state 56
	and :  and AND unary_    (20)

	.  reduce 20


state 57
	atom :  LPAREN expression RPAREN_    (30)

	.  reduce 30


state 58
	universal :  LEFTUNIVERSAL IDENTIFIER RIGHTUNIVERSAL_    (25)

	.  reduce 25


state 59
	existential :  LEFTEXISTENTIAL IDENTIFIER RIGHTEXISTENTIAL_    (26)

	.  reduce 26


state 60
	predicate :  PIDENTIFIER LPAREN arglist_RPAREN 
	arglist :  arglist_separator arg 

	COMMA  shift 37
	RPAREN  shift 69
	.  error

	separator  goto 70

state 61
	arglist :  arg_    (33)

	.  reduce 33


state 62
	arg :  term_    (35)

	.  reduce 35


state 63
	term :  constant_    (36)

	.  reduce 36


state 64
	term :  variable_    (37)

	.  reduce 37


state 65
	term :  function_    (38)

	.  reduce 38


state 66
	constant :  STRING_    (39)

	.  reduce 39


state 67
	constant :  NUMBER_    (40)

	.  reduce 40


state 68
	variable :  IDENTIFIER_    (41)
	function :  IDENTIFIER_LPAREN arglist RPAREN 

	LPAREN  shift 71
	.  reduce 41


state 69
	predicate :  PIDENTIFIER LPAREN arglist RPAREN_    (32)

	.  reduce 32


state 70
	arglist :  arglist separator_arg 

	IDENTIFIER  shift 68
	NUMBER  shift 67
	STRING  shift 66
	.  error

	arg  goto 72
	constant  goto 63
	function  goto 65
	term  goto 62
	variable  goto 64

state 71
	function :  IDENTIFIER LPAREN_arglist RPAREN 

	IDENTIFIER  shift 68
	NUMBER  shift 67
	STRING  shift 66
	.  error

	arglist  goto 73
	arg  goto 61
	constant  goto 63
	function  goto 65
	term  goto 62
	variable  goto 64

state 72
	arglist :  arglist separator arg_    (34)

	.  reduce 34


state 73
	arglist :  arglist_separator arg 
	function :  IDENTIFIER LPAREN arglist_RPAREN 

	COMMA  shift 37
	RPAREN  shift 74
	.  error

	separator  goto 70

state 74
	function :  IDENTIFIER LPAREN arglist RPAREN_    (42)

	.  reduce 42


24/127 terminals, 23/600 nonterminals
47/300 grammar rules, 75/1000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
34/601 working sets used
memory: states,etc. 185/2000, parser 137/4000
37/3001 distinct lookahead sets
14 extra closures
126 shift entries, 1 exceptions
46 goto entries
81 entries saved by goto default
Optimizer space used: input 323/2000, output 125/4000
125 table entries, 29 zero
maximum spread: 278, maximum offset: 275
